# AgentRoyale

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TASK_PACK_IDEAS.md  audit_ground_truth.py  export_launch_snapshot.py  pyproject.toml  requirements.txt  run_benchmark.py  seed_ground_truth_from_audit.py
.github/ISSUE_TEMPLATE/: adapter.md  bug.md  report-improvement.md  task-pack.md
agent_royale/: __init__.py  __main__.py  cli.py  compare.py  grading.py  ground_truth.py  lint.py  report.py  runner.py  schema.py  targets.py
backend/: batch.py  bright_data.py  config.py  evaluator.py  extractors.py  grader.py  llm.py  main.py  models.py  store.py  task_bank.py
data/: excluded_tasks.json  tasks.csv
docs/: DECISIONS.md  adapter-contract.md  adjacent-tools.md  bright-data-run.md  bright-data.md  final-launch-checklist.md  github-actions.md  golden-path.md  good-first-issues.md  integrations.md  launch-checklist.md  launch-post.md  medium-launch-article.md  openrouter.md  quickstart.md  realistic-dev-eval.md  reliability.md  task-spec.md  v2-quickstart.md  v3-progress-summary.md  v3-task-banks.md
examples/: dev_research_agent.py  dev_research_agent_fixed.py  echo_agent.py  flagship_dev_web_agent.py  flaky_agent.py  local_agent.py  openrouter_native_agent.py
frontend/: index.html
reports/: bright-data-ecommerce-agent.html
storage/: ground_truth.jsonl  runs.jsonl  v1_ground_truth_audit.csv
task-packs/: README.md  static-smoke.yaml
tests/: test_bright_data.py  test_grading.py  test_reliability.py
(+65 files in other folders)
