[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-royale"
version = "0.1.3"
description = "Unit tests for AI agents and retrieval layers that browse the web."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
agent-royale = "agent_royale.cli:main"

[tool.setuptools.packages.find]
include = ["agent_royale*", "backend*"]
